--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!--素馨花卉首页轮播图部分开始-->
 <div class="su_banner">
     <div class="banner_img">
-        <img src="images/banner_img2.jpg" alt="">
+        <img src="images/banner_img2.JPG" alt="">
     </div>
     <ol class="banner_dots">
         <li class="dot1"></li>
