--- a/aboutSuXin.html
+++ b/aboutSuXin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>关于素馨</title>
     <link rel="stylesheet" href="CSS/huahui.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1019577_33dzztt3xfw.css">
     <style>
         .about_su_banner{
             width:100%;
