--- a/flowerArt.html
+++ b/flowerArt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>素馨花艺</title>
     <link rel="stylesheet" href="CSS/flowerArt.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1019577_33dzztt3xfw.css">
 </head>
 <body>
 <!--素馨花卉素馨花艺导航栏部分开始-->
