--- a/leaveWord.html
+++ b/leaveWord.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>留言建议</title>
     <link rel="stylesheet" href="CSS/leaveWord.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1019577_q3g9vt2dsn.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1019577_33dzztt3xfw.css">
 </head>
 <body>
 <!--素馨花卉留言建议导航栏部分开始-->
@@ -33,7 +33,7 @@
             <li>
                 <a href="flowerArt.html">素馨花艺</a>
             </li>
-            <li class="aHover">
+            <li class="aHover leaveWord">
                 <a href="" class="active">留言建议
                 <span class="caret"></span>
                 </a>
