--- a/leaveWord.html
+++ b/leaveWord.html
@@ -160,4 +160,66 @@
                     </div>
                     <div class="form_group">
                         <div>
-                            <input type="text" class="form_group_control" placeholder="电子邮
+                            <input type="text" class="form_group_control" placeholder="电子邮箱">
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div>
+                            <textarea name="" class="form_group_control" rows="5" placeholder="您的建议" ></textarea>
+                        </div>
+                    </div>
+                    <div class="form_group">
+                        <div class="control_input">
+                            <input type="text" class="form_group_control" placeholder="验证码">
+                            <span class="form_group_addon">
+                                <img src="images/ajax.png" alt="看不清？点击更换验证码">
+                            </span>
+                        </div>
+                    </div>
+                    <div class="form_group margin-bottom-0">
+                        <button type="submit" class="btn">提交</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<!--素馨花卉留言建议内容部分结束-->
+<!--素馨花卉花言花语底部部分开始-->
+<footer>
+    <div class="linksnav">
+
+    </div>
+    <div class="met_social">
+        <a href="">
+            <i class="iconfont icon-weixin">
+
+            </i>
+        </a>
+        <a href="">
+            <i class="iconfont icon-qq social_blue">
+
+            </i>
+        </a>
+        <a href="">
+            <i class="iconfont icon-youxiang social_blue">
+
+            </i>
+        </a>
+    </div>
+    <div class="met_text">
+        <div class="container">
+            <p class="txt">
+                <a href="http://www.miitbeian.gov.cn/">豫ICP备17021305号</a> &nbsp; &nbsp;
+                <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=41012202000160">
+                    <img src="images/gonganbeian.png" >豫公网安备 41012202000160号
+                </a>
+            </p>
+            <p class="txt">联系电话 0371-62180519  15890062947</p>
+            <p class="txt">郑州素馨花卉有限公司 版权所有 © 2017-2021</p>
+        </div>
+    </div>
+</footer>
+<!--素馨花卉花言花语底部部分结束-->
+</body>
+</html>
