--- a/leaveWord.html
+++ b/leaveWord.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="form_group">
                         <div>
-                            <textarea name="" class="form_group_control" rows="5" placeholder="您的建议" ></textarea>
+                            <textarea name="" class="form_group_control" rows="5" placeholder="您的建议" style="resize:none" ></textarea>
                         </div>
                     </div>
                     <div class="form_group">
